Fix icon vertical alignment within md-button. Closes #8066

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -145,6 +145,11 @@ button.md-button::-moz-focus-inner {
     &.ng-hide, &.ng-leave {
       transition: none;
     }
+
+    md-icon {
+      // Fixes icon vertical alignment.
+      display: block;
+    }
   }
 
   &:not([disabled]) {
